fourth-year/compiling-languages/latte/src/Grammar/Par.info
-----------------------------------------------------------------------------
Info file generated by Happy Version 1.20.1.1 from Grammar/Par.y
-----------------------------------------------------------------------------

state 74 contains 1 shift/reduce conflicts.
state 143 contains 1 shift/reduce conflicts.

rule 46 is unused
rule 47 is unused
rule 48 is unused

-----------------------------------------------------------------------------
Grammar
-----------------------------------------------------------------------------
	%start_pProgram_internal -> Program                (0)
	Ident -> L_Ident                                   (1)
	Integer -> L_integ                                 (2)
	String -> L_quoted                                 (3)
	Program -> ListTopDef                              (4)
	TopDef -> ClassDef                                 (5)
	TopDef -> FnDef                                    (6)
	FnDef -> Type Ident '(' ListArg ')' Block          (7)
	ListTopDef -> TopDef                               (8)
	ListTopDef -> TopDef ListTopDef                    (9)
	ClassMember -> Type Ident ';'                      (10)
	ClassMember -> FnDef                               (11)
	ClassDef -> 'class' Ident '{' ListClassMember '}'   (12)
	ClassDef -> 'class' Ident 'extends' Ident '{' ListClassMember '}'   (13)
	ListClassMember ->                                 (14)
	ListClassMember -> ClassMember ListClassMember     (15)
	Arg -> Type Ident                                  (16)
	ListArg ->                                         (17)
	ListArg -> Arg                                     (18)
	ListArg -> Arg ',' ListArg                         (19)
	Block -> '{' ListStmt '}'                          (20)
	ListStmt ->                                        (21)
	ListStmt -> Stmt ListStmt                          (22)
	Stmt -> ';'                                        (23)
	Stmt -> Block                                      (24)
	Stmt -> Type ListItem ';'                          (25)
	Stmt -> Expr '=' Expr ';'                          (26)
	Stmt -> Expr '++' ';'                              (27)
	Stmt -> Expr '--' ';'                              (28)
	Stmt -> 'return' Expr ';'                          (29)
	Stmt -> 'return' ';'                               (30)
	Stmt -> 'if' '(' Expr ')' Stmt                     (31)
	Stmt -> 'if' '(' Expr ')' Stmt 'else' Stmt         (32)
	Stmt -> 'while' '(' Expr ')' Stmt                  (33)
	Stmt -> 'for' '(' Type Ident ':' Expr ')' Stmt     (34)
	Stmt -> Expr ';'                                   (35)
	Item -> Ident                                      (36)
	Item -> Ident '=' Expr                             (37)
	ListItem -> Item                                   (38)
	ListItem -> Item ',' ListItem                      (39)
	Type -> Ident                                      (40)
	Type -> 'int'                                      (41)
	Type -> 'string'                                   (42)
	Type -> 'boolean'                                  (43)
	Type -> 'void'                                     (44)
	Type -> Type '[]'                                  (45)
	ListType ->                                        (46)
	ListType -> Type                                   (47)
	ListType -> Type ',' ListType                      (48)
	Expr6 -> 'new' Type                                (49)
	Expr6 -> 'new' Type '[' Expr ']'                   (50)
	Expr6 -> Expr6 '.' Ident                           (51)
	Expr6 -> Expr6 '.' Ident '(' ListExpr ')'          (52)
	Expr6 -> Expr6 '[' Expr ']'                        (53)
	Expr6 -> Ident                                     (54)
	Expr6 -> Integer                                   (55)
	Expr6 -> 'true'                                    (56)
	Expr6 -> 'false'                                   (57)
	Expr6 -> Ident '(' ListExpr ')'                    (58)
	Expr6 -> String                                    (59)
	Expr6 -> '(' Expr ')'                              (60)
	Expr5 -> '-' Expr6                                 (61)
	Expr5 -> '!' Expr6                                 (62)
	Expr5 -> Expr6                                     (63)
	Expr4 -> Expr4 MulOp Expr5                         (64)
	Expr4 -> Expr5                                     (65)
	Expr3 -> Expr3 AddOp Expr4                         (66)
	Expr3 -> Expr4                                     (67)
	Expr2 -> Expr2 RelOp Expr3                         (68)
	Expr2 -> Expr3                                     (69)
	Expr1 -> Expr2 '&&' Expr1                          (70)
	Expr1 -> Expr2                                     (71)
	Expr -> Expr1 '||' Expr                            (72)
	Expr -> Expr1                                      (73)
	ListExpr ->                                        (74)
	ListExpr -> Expr                                   (75)
	ListExpr -> Expr ',' ListExpr                      (76)
	AddOp -> '+'                                       (77)
	AddOp -> '-'                                       (78)
	MulOp -> '*'                                       (79)
	MulOp -> '/'                                       (80)
	MulOp -> '%'                                       (81)
	RelOp -> '<'                                       (82)
	RelOp -> '<='                                      (83)
	RelOp -> '>'                                       (84)
	RelOp -> '>='                                      (85)
	RelOp -> '=='                                      (86)
	RelOp -> '!='                                      (87)

-----------------------------------------------------------------------------
Terminals
-----------------------------------------------------------------------------
	'!'            { PT _ (TS _ 1) }
	'!='           { PT _ (TS _ 2) }
	'%'            { PT _ (TS _ 3) }
	'&&'           { PT _ (TS _ 4) }
	'('            { PT _ (TS _ 5) }
	')'            { PT _ (TS _ 6) }
	'*'            { PT _ (TS _ 7) }
	'+'            { PT _ (TS _ 8) }
	'++'           { PT _ (TS _ 9) }
	','            { PT _ (TS _ 10) }
	'-'            { PT _ (TS _ 11) }
	'--'           { PT _ (TS _ 12) }
	'.'            { PT _ (TS _ 13) }
	'/'            { PT _ (TS _ 14) }
	':'            { PT _ (TS _ 15) }
	';'            { PT _ (TS _ 16) }
	'<'            { PT _ (TS _ 17) }
	'<='           { PT _ (TS _ 18) }
	'='            { PT _ (TS _ 19) }
	'=='           { PT _ (TS _ 20) }
	'>'            { PT _ (TS _ 21) }
	'>='           { PT _ (TS _ 22) }
	'['            { PT _ (TS _ 23) }
	'[]'           { PT _ (TS _ 24) }
	']'            { PT _ (TS _ 25) }
	'boolean'      { PT _ (TS _ 26) }
	'class'        { PT _ (TS _ 27) }
	'else'         { PT _ (TS _ 28) }
	'extends'      { PT _ (TS _ 29) }
	'false'        { PT _ (TS _ 30) }
	'for'          { PT _ (TS _ 31) }
	'if'           { PT _ (TS _ 32) }
	'int'          { PT _ (TS _ 33) }
	'new'          { PT _ (TS _ 34) }
	'return'       { PT _ (TS _ 35) }
	'string'       { PT _ (TS _ 36) }
	'true'         { PT _ (TS _ 37) }
	'void'         { PT _ (TS _ 38) }
	'while'        { PT _ (TS _ 39) }
	'{'            { PT _ (TS _ 40) }
	'||'           { PT _ (TS _ 41) }
	'}'            { PT _ (TS _ 42) }
	L_Ident        { PT _ (TV _) }
	L_integ        { PT _ (TI _) }
	L_quoted       { PT _ (TL _) }

-----------------------------------------------------------------------------
Non-terminals
-----------------------------------------------------------------------------
	%start_pProgram_internal rule  0
	Ident           rule  1
	Integer         rule  2
	String          rule  3
	Program         rule  4
	TopDef          rules 5, 6
	FnDef           rule  7
	ListTopDef      rules 8, 9
	ClassMember     rules 10, 11
	ClassDef        rules 12, 13
	ListClassMember rules 14, 15
	Arg             rule  16
	ListArg         rules 17, 18, 19
	Block           rule  20
	ListStmt        rules 21, 22
	Stmt            rules 23, 24, 25, 26, 27, 28, 29, 30, 31, 32, 33, 34, 35
	Item            rules 36, 37
	ListItem        rules 38, 39
	Type            rules 40, 41, 42, 43, 44, 45
	ListType        rules 46, 47, 48
	Expr6           rules 49, 50, 51, 52, 53, 54, 55, 56, 57, 58, 59, 60
	Expr5           rules 61, 62, 63
	Expr4           rules 64, 65
	Expr3           rules 66, 67
	Expr2           rules 68, 69
	Expr1           rules 70, 71
	Expr            rules 72, 73
	ListExpr        rules 74, 75, 76
	AddOp           rules 77, 78
	MulOp           rules 79, 80, 81
	RelOp           rules 82, 83, 84, 85, 86, 87

-----------------------------------------------------------------------------
States
-----------------------------------------------------------------------------
State 0

	%start_pProgram_internal -> . Program               (rule 0)

	'boolean'      shift, and enter state 10
	'class'        shift, and enter state 11
	'int'          shift, and enter state 12
	'string'       shift, and enter state 13
	'void'         shift, and enter state 14
	L_Ident        shift, and enter state 2

	Ident          goto state 3
	Program        goto state 4
	TopDef         goto state 5
	FnDef          goto state 6
	ListTopDef     goto state 7
	ClassDef       goto state 8
	Type           goto state 9

State 1

	Ident -> . L_Ident                                  (rule 1)

	L_Ident        shift, and enter state 2


State 2

	Ident -> L_Ident .                                  (rule 1)

	'!='           reduce using rule 1
	'%'            reduce using rule 1
	'&&'           reduce using rule 1
	'('            reduce using rule 1
	')'            reduce using rule 1
	'*'            reduce using rule 1
	'+'            reduce using rule 1
	'++'           reduce using rule 1
	','            reduce using rule 1
	'-'            reduce using rule 1
	'--'           reduce using rule 1
	'.'            reduce using rule 1
	'/'            reduce using rule 1
	':'            reduce using rule 1
	';'            reduce using rule 1
	'<'            reduce using rule 1
	'<='           reduce using rule 1
	'='            reduce using rule 1
	'=='           reduce using rule 1
	'>'            reduce using rule 1
	'>='           reduce using rule 1
	'['            reduce using rule 1
	'[]'           reduce using rule 1
	']'            reduce using rule 1
	'extends'      reduce using rule 1
	'{'            reduce using rule 1
	'||'           reduce using rule 1
	L_Ident        reduce using rule 1


State 3

	Type -> Ident .                                     (rule 40)

	'!='           reduce using rule 40
	'%'            reduce using rule 40
	'&&'           reduce using rule 40
	')'            reduce using rule 40
	'*'            reduce using rule 40
	'+'            reduce using rule 40
	'++'           reduce using rule 40
	','            reduce using rule 40
	'-'            reduce using rule 40
	'--'           reduce using rule 40
	'.'            reduce using rule 40
	'/'            reduce using rule 40
	';'            reduce using rule 40
	'<'            reduce using rule 40
	'<='           reduce using rule 40
	'='            reduce using rule 40
	'=='           reduce using rule 40
	'>'            reduce using rule 40
	'>='           reduce using rule 40
	'['            reduce using rule 40
	'[]'           reduce using rule 40
	']'            reduce using rule 40
	'||'           reduce using rule 40
	L_Ident        reduce using rule 40


State 4

	%start_pProgram_internal -> Program .               (rule 0)

	%eof           accept


State 5

	ListTopDef -> TopDef .                              (rule 8)
	ListTopDef -> TopDef . ListTopDef                   (rule 9)

	'boolean'      shift, and enter state 10
	'class'        shift, and enter state 11
	'int'          shift, and enter state 12
	'string'       shift, and enter state 13
	'void'         shift, and enter state 14
	L_Ident        shift, and enter state 2
	%eof           reduce using rule 8

	Ident          goto state 3
	TopDef         goto state 5
	FnDef          goto state 6
	ListTopDef     goto state 18
	ClassDef       goto state 8
	Type           goto state 9

State 6

	TopDef -> FnDef .                                   (rule 6)

	'boolean'      reduce using rule 6
	'class'        reduce using rule 6
	'int'          reduce using rule 6
	'string'       reduce using rule 6
	'void'         reduce using rule 6
	L_Ident        reduce using rule 6
	%eof           reduce using rule 6


State 7

	Program -> ListTopDef .                             (rule 4)

	%eof           reduce using rule 4


State 8

	TopDef -> ClassDef .                                (rule 5)

	'boolean'      reduce using rule 5
	'class'        reduce using rule 5
	'int'          reduce using rule 5
	'string'       reduce using rule 5
	'void'         reduce using rule 5
	L_Ident        reduce using rule 5
	%eof           reduce using rule 5


State 9

	FnDef -> Type . Ident '(' ListArg ')' Block         (rule 7)
	Type -> Type . '[]'                                 (rule 45)

	'[]'           shift, and enter state 17
	L_Ident        shift, and enter state 2

	Ident          goto state 16

State 10

	Type -> 'boolean' .                                 (rule 43)

	'!='           reduce using rule 43
	'%'            reduce using rule 43
	'&&'           reduce using rule 43
	')'            reduce using rule 43
	'*'            reduce using rule 43
	'+'            reduce using rule 43
	'++'           reduce using rule 43
	','            reduce using rule 43
	'-'            reduce using rule 43
	'--'           reduce using rule 43
	'.'            reduce using rule 43
	'/'            reduce using rule 43
	';'            reduce using rule 43
	'<'            reduce using rule 43
	'<='           reduce using rule 43
	'='            reduce using rule 43
	'=='           reduce using rule 43
	'>'            reduce using rule 43
	'>='           reduce using rule 43
	'['            reduce using rule 43
	'[]'           reduce using rule 43
	']'            reduce using rule 43
	'||'           reduce using rule 43
	L_Ident        reduce using rule 43


State 11

	ClassDef -> 'class' . Ident '{' ListClassMember '}'    (rule 12)
	ClassDef -> 'class' . Ident 'extends' Ident '{' ListClassMember '}'    (rule 13)

	L_Ident        shift, and enter state 2

	Ident          goto state 15

State 12

	Type -> 'int' .                                     (rule 41)

	'!='           reduce using rule 41
	'%'            reduce using rule 41
	'&&'           reduce using rule 41
	')'            reduce using rule 41
	'*'            reduce using rule 41
	'+'            reduce using rule 41
	'++'           reduce using rule 41
	','            reduce using rule 41
	'-'            reduce using rule 41
	'--'           reduce using rule 41
	'.'            reduce using rule 41
	'/'            reduce using rule 41
	';'            reduce using rule 41
	'<'            reduce using rule 41
	'<='           reduce using rule 41
	'='            reduce using rule 41
	'=='           reduce using rule 41
	'>'            reduce using rule 41
	'>='           reduce using rule 41
	'['            reduce using rule 41
	'[]'           reduce using rule 41
	']'            reduce using rule 41
	'||'           reduce using rule 41
	L_Ident        reduce using rule 41


State 13

	Type -> 'string' .                                  (rule 42)

	'!='           reduce using rule 42
	'%'            reduce using rule 42
	'&&'           reduce using rule 42
	')'            reduce using rule 42
	'*'            reduce using rule 42
	'+'            reduce using rule 42
	'++'           reduce using rule 42
	','            reduce using rule 42
	'-'            reduce using rule 42
	'--'           reduce using rule 42
	'.'            reduce using rule 42
	'/'            reduce using rule 42
	';'            reduce using rule 42
	'<'            reduce using rule 42
	'<='           reduce using rule 42
	'='            reduce using rule 42
	'=='           reduce using rule 42
	'>'            reduce using rule 42
	'>='           reduce using rule 42
	'['            reduce using rule 42
	'[]'           reduce using rule 42
	']'            reduce using rule 42
	'||'           reduce using rule 42
	L_Ident        reduce using rule 42


State 14

	Type -> 'void' .                                    (rule 44)

	'!='           reduce using rule 44
	'%'            reduce using rule 44
	'&&'           reduce using rule 44
	')'            reduce using rule 44
	'*'            reduce using rule 44
	'+'            reduce using rule 44
	'++'           reduce using rule 44
	','            reduce using rule 44
	'-'            reduce using rule 44
	'--'           reduce using rule 44
	'.'            reduce using rule 44
	'/'            reduce using rule 44
	';'            reduce using rule 44
	'<'            reduce using rule 44
	'<='           reduce using rule 44
	'='            reduce using rule 44
	'=='           reduce using rule 44
	'>'            reduce using rule 44
	'>='           reduce using rule 44
	'['            reduce using rule 44
	'[]'           reduce using rule 44
	']'            reduce using rule 44
	'||'           reduce using rule 44
	L_Ident        reduce using rule 44


State 15

	ClassDef -> 'class' Ident . '{' ListClassMember '}'    (rule 12)
	ClassDef -> 'class' Ident . 'extends' Ident '{' ListClassMember '}'    (rule 13)

	'extends'      shift, and enter state 20
	'{'            shift, and enter state 21


State 16
